stylesheets/stylesheet.css
/* ... */
.radio-btn.radio-btn-selected {
  background-color: #12425e;
}

.filters-panel {
  margin-bottom: 20px;
}

.projects .stats {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.fork-count {
    display: flex;
    margin-top: 10px;
    height: max-content;
}

.fork-count-svg {
    align-self: center;
}

@media (prefers-color-scheme: dark) {
  .fork-count-svg {
    fill: #7C8590;
  }
}
@media screen and (max-width : 670px) {
  #view-mode {
    position: fixed;
    width: 44px;
    height: 44px;
    z-index: 999;
    margin-right: 10px;
    right: 0;
    top: 18px;
  }

  #back2Top {
    width: 44px;
    height: 44px;
    overflow: hidden;
    z-index: 999;
    display: none;
    cursor: pointer;
    -moz-transform: rotate(270deg);
    -webkit-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
    position: fixed;
    right: 0;
    bottom: 18px;
    margin-right: 10px;
    border-radius: 50%;
    background-color: #DDD;
    color: #555;
    display: flex !important;
    align-items: center;
    justify-content: center;
    font-size: 28px;
    transition: 0.3s;
  }
}

